--- a/source/assets/reset.css
+++ b/source/assets/reset.css
@@ -42,6 +42,9 @@ table {
     border-collapse: collapse;
     border-spacing: 0;
 }
-.test {
-    color: #990000;
-}
+button,
+select,
+html,
+textarea,
+input {
+    font-family: Roboto, "Helvetica Neue", sans-serif; }
