add error handler

--- a/source/index.css
+++ b/source/index.css
@@ -1,3 +1,2 @@
 @import "./assets/reset.css";
-/*@import "./assets/dist/css/mobile-angular-ui-base.css";*/
-/*@import "./assets/material/material-design.css";*/
+@import "./assets/styles.css";
